--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,19 @@ build/
 Thumbs.db
 
 # Ignore IDE specific files
-.vscode/
 .idea/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 # Ignore dependency directories
 bower_components/
